@@ -80,7 +80,7 @@ void deftounicode(strnumber glyph, strnumber unistr)
     for (i = 0; i < l; i++) {
         if (p[i] == ' ')
             valid_unistr = 2;   /* if a space occurs we treat this entry as a string */
-        else if (!isXdigit(p[i])) {
+        else if (!isXdigit((unsigned char)p[i])) {
             valid_unistr = 0;
             break;
         }
@@ -137,7 +137,7 @@ static long check_unicode_value(const char *s, boolean multiple_value)
         return UNI_UNDEF;
 
     for (i = 0; i < l; i++) {
-        if (!isXdigit(s[i]))
+        if (!isXdigit((unsigned char)s[i]))
             return UNI_UNDEF;
         if (multiple_value) {
             if (i % 4 == 3) {
